<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:id="@+id/mainFragment"

    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="10.0dip"
            android:weightSum="1.0"
            >

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/locationImageView"
                android:background="@drawable/gps_not_fixed"
                android:layout_width="117.0dip"
                android:layout_height="116.0dip"
                android:layout_marginTop="10.0dip"
                android:adjustViewBounds="true" />


            <TextView
                android:layout_gravity="center"
                android:id="@+id/locationTextView"
                android:paddingTop="10.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_not_available" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10.0dip"
            >

            <ImageView android:layout_gravity="center"
                android:id="@+id/connectionImageView"
                android:background="@drawable/server_disconnected"
                android:layout_width="125.0dip"
                android:layout_height="116.0dip"
                android:layout_marginTop="10.0dip"
                android:adjustViewBounds="true" />

            <TextView android:layout_gravity="center"
                android:id="@+id/connectionTextView"
                android:paddingTop="10.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_disconnected" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30.0dip"
        >

        <TextView android:id="@+id/OFFTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/off" />
        <Switch android:id="@+id/startServiceSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:thumb="@drawable/custom_selector"
            android:track="@drawable/custom_track" />
        <TextView android:id="@+id/ONTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/on" />

    </androidx.appcompat.widget.LinearLayoutCompat>



    <androidx.appcompat.widget.LinearLayoutCompat android:layout_gravity="left" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="20.0dip">
        <ImageView android:id="@+id/imageViewLongitude" android:background="@drawable/ic_dot" android:layout_width="30.0dip" android:layout_height="30.0dip" android:adjustViewBounds="true" />
        <TextView android:id="@+id/longitudeLabel"
            android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="6.0dip" android:text="@string/longitudeLabel" />
        <TextView android:textSize="20.0dip"
            android:id="@+id/longitudeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11.0dip"
            android:layout_marginTop="6.0dip"
            android:text="@string/zeroValue" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat android:layout_gravity="left" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="20.0dip">
        <ImageView android:id="@+id/imageViewLatitude"
            android:background="@drawable/ic_dot"
            android:layout_width="30.0dip"
            android:layout_height="30.0dip"
            android:adjustViewBounds="true" />
        <TextView android:id="@+id/latitudeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="6.0dip" android:text="@string/latitudeLabel" />
        <TextView android:textSize="20.0dip"
            android:id="@+id/latitudeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22.0dip" android:layout_marginTop="6.0dip" android:text="@string/zeroValue" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat android:layout_gravity="left" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="20.0dip">
        <ImageView android:id="@+id/imageViewVelocity"
            android:background="@drawable/ic_triangle"
            android:layout_width="30.0dip"
            android:layout_height="30.0dip"
            android:adjustViewBounds="true" />
        <TextView
            android:id="@+id/velocityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="6.0dip"
            android:text="@string/velocityLabel" />
        <TextView android:textSize="20.0dip"
            android:id="@+id/velocityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="6.0dip"
            android:text="@string/zeroValue" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</LinearLayout>